Added fragrance finder frontend
